--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,11 @@
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 .App {
   text-align: center;
   margin: 20px;
@@ -38,15 +46,17 @@
     //border-top: 1px solid gray;
     //border-left: 1px solid gray;
   }
+
+  input[type=text] {
+    width: 100%;
+    height: 100%;
+    border: none;
+    font-size: 14px;
+    vertical-align: top;
+  }
 }
 
 .row {
   display: block;
   height: 30px;
-}
-
-.md-table {
-  font-family: monospace;
-  white-space: pre;
-  text-align: left;
 }
