--- a/src/styles/Table.scss
+++ b/src/styles/Table.scss
@@ -14,21 +14,21 @@ table.editable {
 
   td, th {
     border: 1px solid #dfe2e5;
-    padding: 6px 12px;
     min-width: 100px;
-    min-height: 32px;
+    height: 32px;
 
-    > span {
+    .cell-value {
       display: block;
-      padding: 4px;
+      padding: 6px 12px;
     }
 
     input[type=text] {
       width: 100%;
       height: 100%;
       border: none;
-      font-size: 14px;
+      font-size: 16px;
       vertical-align: top;
+      padding: 6px 12px;
     }
   }
 } /* --table.editable */
