--- a/src/styles/Table.scss
+++ b/src/styles/Table.scss
@@ -20,20 +20,12 @@ table.editable {
     border: 1px solid #dfe2e5;
     min-width: 100px;
     height: 32px;
+    position: relative;
     transition: 0.5s all;
 
     .cell-value {
       display: block;
-      padding: 6px 12px;
-    }
-
-    input[type=text] {
-      width: 100%;
-      height: 100%;
-      border: none;
-      font-size: 16px;
-      vertical-align: top;
-      padding: 6px 12px;
+      padding: 8px 14px;
     }
 
     &.table-head {
@@ -58,6 +50,28 @@ table.editable {
       .delete-icon {
         cursor: pointer;
       }
+    }
+
+    .insert-row {
+      position: absolute;
+      top: -10px;
+      transform: translateX(-50%);
+      left: 50%;
+    }
+
+    .insert-column {
+      position: absolute;
+      left: -8px;
+      transform: translateY(-40%);
+      top: 50%;
+    }
+
+    .insert-icon {
+      fill: #c3c3c3;
+      background-color: white;
+      border-radius: 50%;
+      border: 1px solid lightgray;
+      cursor: pointer;
     }
   }
 
