Enter adds newline on markdown (chrome only)

--- a/src/styles/Table.scss
+++ b/src/styles/Table.scss
@@ -22,7 +22,8 @@ table.editable {
     transition: 0.5s all;
 
     .cell-value {
-      display: block;
+      display: inline-block;
+      width: 100%;
       padding: 8px 14px;
     }
 
