--- a/src/styles/Table.scss
+++ b/src/styles/Table.scss
@@ -25,6 +25,7 @@ table.editable {
       display: inline-block;
       width: 100%;
       padding: 8px 14px;
+      line-height: 21px;
     }
 
     &.table-head {
@@ -82,6 +83,15 @@ table.editable {
         transition: 0.5s all;
       }
     }
+  }
+
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+    padding: 0.2em 0.4em;
+    margin: 0;
+    font-size: 85%;
+    background-color: rgba(27,31,35,0.05);
+    border-radius: 3px;
   }
 } /* --table.editable */
 
