Add Left/Right/Center Alignment buttons

--- a/src/styles/Table.scss
+++ b/src/styles/Table.scss
@@ -28,6 +28,16 @@ table.editable {
       line-height: 21px;
     }
 
+    .align {
+      &-center {
+        text-align: center;
+      }
+
+      &-right {
+        text-align: right;
+      }
+    }
+
     &.table-head {
       text-align: center;
       font-weight: 700;
