--- a/src/components/layout/Button.module.scss
+++ b/src/components/layout/Button.module.scss
@@ -1,13 +1,69 @@
 .button {
-  padding: 0.5rem 1rem;
+  display: inline-flex;
+  align-items: stretch;
+  padding: 0;
   user-select: none;
-  //background-color: blue;
+  background-color: white; // #920661;
   border-radius: 4px;
-  //color: white;
+  color: black;
+  margin: 4px;
+  border: 1px solid #3a3a3a;
+  font-size: 0.8rem;
+  cursor: pointer;
+  font-weight: 500;
+  vertical-align: middle;
+
+  &:hover {
+    color: #1638d8;
+    border-color: #1638d8;
+    background-color: #e6eaff;
+
+    .icon {
+      background-color: #c8d1ff;
+      border-color: #b5c1ff;
+    }
+  }
+
+  &:focus {
+    outline: none;
+    box-shadow: 0 0 0px 2px rgba(161, 176, 253, 0.68);
+  }
 }
 
 .enabled {
-  background-color: gray;
-  color: white;
-  transition: 0.5s;
+  background-color: #c8d1ff;
+  color: #1638d8;
+  //transition: 0.3s;
+  border-color: #1638d8;
+
+  &:hover {
+    background-color: #c8d1ff;
+    
+    .icon {
+      background-color: #b5c1ff;
+    }
+  }
+
+  .icon {
+    color: #1638d8;
+    background-color: #b5c1ff;
+    border-color: #b5c1ff;
+  }
+}
+
+.icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #e8e8e8;
+  color: #676767;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  width: 28px;
+  border-right: 1px solid #d8d8d8;
+}
+
+.text {
+  display: inline-block;
+  padding: 0.5rem 1rem;
 }
