--- a/src/styles/MainEditor.scss
+++ b/src/styles/MainEditor.scss
@@ -2,8 +2,14 @@
 
   height: 100%;
 
+  .toolbar {
+    background-color: #e8e8e8;
+    border-bottom: 2px solid #d2d2d2;
+  }
+
   .cell-value-input {
-    width: 100%;
+    width: 200px;
+    margin: 4px;
     font-size: 14px;
     padding: 4px;
     font-family: inherit;
