Add windowed/fullscreen support

--- a/src/components/layout/Button.module.scss
+++ b/src/components/layout/Button.module.scss
@@ -67,3 +67,10 @@
   display: inline-block;
   padding: 0.5rem 1rem;
 }
+
+.type-flat {
+  font-weight: 400;
+  border: 1px solid #c5c5c5;
+  background-color: #e8e8e8;
+  color: #585757;
+}
