--- a/src/styles/MainEditor.scss
+++ b/src/styles/MainEditor.scss
@@ -5,6 +5,12 @@
   .toolbar {
     background-color: #e8e8e8;
     border-bottom: 2px solid #d2d2d2;
+    display: flex;
+    justify-content: space-between;
+
+    .main-buttons {
+      flex: 1;
+    }
   }
 
   .cell-value-input {
@@ -39,5 +45,15 @@
       padding: 30px;
       overflow: auto;
     }
+  }
+
+  &-windowed {
+    height: 60vh;
+    width: 90vw;
+    max-width: 1200px;
+    margin: 20px auto;
+    border-radius: 4px;
+    border: 2px solid #a2a2a2;
+    overflow: auto;
   }
 }
