--- a/src/components/layout/Button.module.scss
+++ b/src/components/layout/Button.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colors.scss';
+
 .button {
   display: inline-flex;
   align-items: stretch;
@@ -5,9 +7,9 @@
   user-select: none;
   background-color: white; // #920661;
   border-radius: 4px;
-  color: black;
+  color: $lightgray_70;
   margin: 4px;
-  border: 1px solid #3a3a3a;
+  border: 1px solid $lightgray_50;
   font-size: 0.8rem;
   cursor: pointer;
   font-weight: 500;
@@ -55,12 +57,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #e8e8e8;
-  color: #676767;
+  background-color: $lightgray_10;
+  color: $lightgray_60;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
   width: 28px;
-  border-right: 1px solid #d8d8d8;
+  border-right: 1px solid $lightgray_20;
 }
 
 .text {
@@ -72,5 +74,5 @@
   font-weight: 400;
   border: 1px solid #c5c5c5;
   background-color: #e8e8e8;
-  color: #585757;
+  color: $lightgray_60;
 }
