--- a/src/styles/MainEditor.scss
+++ b/src/styles/MainEditor.scss
@@ -1,3 +1,5 @@
+@import './colors.scss';
+
 .main-editor {
 
   height: 100%;
@@ -6,8 +8,8 @@
   flex-direction: column;
 
   .toolbar {
-    background-color: #e8e8e8;
-    border-bottom: 2px solid #d2d2d2;
+    background-color: $lightgray_10;
+    border-bottom: 2px solid $lightgray_20;
     display: flex;
     justify-content: space-between;
 
@@ -22,7 +24,7 @@
     font-size: 14px;
     padding: 4px;
     font-family: inherit;
-    border: 1px solid #3a3a3a;
+    border: 1px solid $lightgray_50;
     border-radius: 4px;
     line-height: 22px;
 
@@ -44,7 +46,8 @@
 
     .markdown-pane {
       flex: 1;
-      background: #f6f8fa;
+      background: $lightgray_5;
+      border-left: 1px solid #e8e8e8;
       padding: 30px;
       overflow: auto;
     }
@@ -56,6 +59,6 @@
     max-width: 1200px;
     margin: 20px auto;
     border-radius: 4px;
-    border: 2px solid #a2a2a2;
+    border: 2px solid $lightgray_50;
   }
 }
