--- a/src/styles/Table.scss
+++ b/src/styles/Table.scss
@@ -1,10 +1,12 @@
+@import './colors.scss';
+
 table.editable {
 
   border-collapse: collapse;
 
   tr {  
     &:nth-child(2n) {
-      background-color: #f6f8fa;
+      background-color: $lightgray_5;
     }
   }
 
@@ -15,7 +17,7 @@ table.editable {
   }
 
   td {
-    border: 1px solid #dfe2e5;
+    border: 1px solid $lightgray_20;
     min-width: 100px;
     height: 32px;
     position: relative;
@@ -70,6 +72,7 @@ table.editable {
 
       .delete-icon {
         cursor: pointer;
+        color: $lightgray_30;
       }
     }
 
@@ -88,10 +91,10 @@ table.editable {
     }
 
     .insert-icon {
-      fill: #c3c3c3;
+      fill: $lightgray_50;
       background-color: white;
       border-radius: 50%;
-      border: 1px solid lightgray;
+      border: 1px solid $lightgray_20;
       cursor: pointer;
     }
   }
@@ -99,7 +102,7 @@ table.editable {
   &:hover {
     td, th {
       &.extra {
-        border-color: #dfe2e5;
+        border-color: $lightgray_20;
         opacity: 0.5;
         transition: 0.5s all;
       }
