blue background and new sample table

--- a/src/styles/MainEditor.scss
+++ b/src/styles/MainEditor.scss
@@ -64,6 +64,7 @@
     max-width: 1400px;
     margin: 20px auto;
     border-radius: 4px;
-    border: 2px solid $lightgray_50;
+    border: 1px solid $lightgray_60;
+    box-shadow: 0px 0px 6px 2px rgba(0,0,0,0.2);
   }
 }
