--- a/src/components/layout/Button.module.scss
+++ b/src/components/layout/Button.module.scss
@@ -90,6 +90,10 @@
       border-color: #1638d8;
     }
   }
+
+  &-highlight {
+    box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.6);
+  }
 } /* --.type */
 
 .size {
