--- a/src/index.css
+++ b/src/index.css
@@ -20,4 +20,6 @@ body {
 
 #root {
   height: 100%;
+  /* background: linear-gradient(180deg, #cfe1fd 86%, #9ca7e8); */
+  background: linear-gradient(180deg, #314cad 86%, #1d31a7);
 }
