Add Import Markdown button

--- a/src/containers/Layout.module.scss
+++ b/src/containers/Layout.module.scss
@@ -14,3 +14,9 @@
     text-align: center;
   }
 }
+
+.importMarkdownTextArea {
+  width: 100%;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-size: 0.8rem;
+}
