--- a/src/components/layout/Modal.module.scss
+++ b/src/components/layout/Modal.module.scss
@@ -25,8 +25,33 @@
   z-index: 10000;
 }
 
+.header {
+  display: flex;
+  padding: 12px;
+  border-bottom: 1px solid $lightgray_10;
+  text-align: center;
+  background-color: $lightgray_5;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  font-size: 1.1rem;
+  justify-content: space-between;
+}
+
+.closeButton {
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  color: $lightgray_70;
+  display: flex;
+}
+
 .body {
-  padding: 24px;
+  padding: 16px;
+
+  > p {
+    margin-top: 0;
+  } 
 }
 
 .footer {
@@ -35,4 +60,6 @@
   text-align: center;
   background-color: $lightgray_5;
   background: linear-gradient(180deg, $lightgray_5, transparent);
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
