--- a/src/styles/Table.scss
+++ b/src/styles/Table.scss
@@ -33,6 +33,10 @@ table.editable {
         box-shadow: 0 0 0px 2px #3255f1;
         outline: 0;
       }
+
+      &:empty::before {
+        content: "\feff";
+      }
     }
 
     .cell-focused {
